[gd_scene load_steps=11 format=3 uid="uid://d0yg0e2kyk0ig"]

[ext_resource type="Texture2D" uid="uid://c8nr83f3w15bk" path="res://car/car.png" id="1_nr2ec"]
[ext_resource type="Script" path="res://car/car.gd" id="1_roxxv"]
[ext_resource type="Texture2D" uid="uid://tiy5mtp0qxnj" path="res://car/wheel.png" id="2_niufl"]
[ext_resource type="Texture2D" uid="uid://c50v5ya36rbdx" path="res://car/Body.png" id="2_t5wce"]
[ext_resource type="Texture2D" uid="uid://biuf1f3ains2y" path="res://car/Head.png" id="3_uif0g"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_voebe"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rmokm"]
radius = 32.0
height = 360.0

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_bbnh7"]
bounce = 0.6

[sub_resource type="CircleShape2D" id="CircleShape2D_17q2n"]
radius = 62.0725

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_nqtwv"]
bounce = 0.5

[node name="Car" type="RigidBody2D"]
collision_mask = 12
mass = 8.0
physics_material_override = SubResource("PhysicsMaterial_voebe")
script = ExtResource("1_roxxv")

[node name="Body" type="Sprite2D" parent="."]
position = Vector2(-51, -33)
texture = ExtResource("2_t5wce")

[node name="Head" type="Sprite2D" parent="."]
position = Vector2(-52, -100)
texture = ExtResource("3_uif0g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 20)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_rmokm")

[node name="PinJoint2D" type="PinJoint2D" parent="."]
position = Vector2(-151, 91)
node_a = NodePath("..")
node_b = NodePath("WheelL")
softness = 12.0
metadata/_edit_group_ = true

[node name="WheelL" type="RigidBody2D" parent="PinJoint2D"]
collision_layer = 2
collision_mask = 8
mass = 0.25
physics_material_override = SubResource("PhysicsMaterial_bbnh7")

[node name="Sprite2D" type="Sprite2D" parent="PinJoint2D/WheelL"]
texture = ExtResource("2_niufl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PinJoint2D/WheelL"]
shape = SubResource("CircleShape2D_17q2n")

[node name="PinJoint2D2" type="PinJoint2D" parent="."]
position = Vector2(109, 90)
node_a = NodePath("..")
node_b = NodePath("WheelR")
softness = 12.0
metadata/_edit_group_ = true

[node name="WheelR" type="RigidBody2D" parent="PinJoint2D2"]
collision_layer = 2
collision_mask = 8
mass = 0.25
physics_material_override = SubResource("PhysicsMaterial_nqtwv")

[node name="Sprite2D" type="Sprite2D" parent="PinJoint2D2/WheelR"]
texture = ExtResource("2_niufl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PinJoint2D2/WheelR"]
shape = SubResource("CircleShape2D_17q2n")

[node name="CarSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_nr2ec")
